[package]
name = "substreams-alloy-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethabi = "17"
hex-literal = "0.3.4"
num-bigint = "0.4"
num-traits = "0.2.15"
prost = "0.11"
prost-types = "0.11"
prost-wkt-types = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-database-change = "1"
serde_json = "1.0.108"
ethereum_abi = { git = "https://github.com/MercuricChloride/rust-ethereum-abi.git", branch = "main"}
primitive-types = "0.12.2"
alloy-sol-macro = { version = "0.5.3", features = ["json"] }
alloy-sol-types = { version = "0.5.3", features = ["json"] }
derive_more = "0.99.17"
alloy-primitives = "0.5.3"
strum = { version = "0.24", features = ["derive"] }
struct_iterable = "0.1.1"
regex = "1.10.2"
